examples/tested/assignment/undefined.lit
unknown = "what"; # error: [line 1] Undefined variable 'unknown'.
